# solana-template

./: .gitignore  README.md  setup
programs/codes/: template_builder.py
programs/codes/template/: Cargo.toml  build-bpf
programs/codes/template/src/: lib.rs
