[package]
name = "template"
version = "0.1.0"
license = "Apache-2.0"
edition = "2018"
publish = false

[features]
no-entrypoint = []

[dependencies]
solana-program = "1.7.11"
solana-validator = { version = "1.7.11", optional = true }

[dev-dependencies]
solana-program-test = "=1.7.11"
solana-sdk = "=1.7.11"

[lib]
name = "lib"
crate-type = ["cdylib", "lib"]
